--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
             <!-- image goes here -->
+            <img :src="image" />
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <a :href="url" target="_blank"> Buy Now</a>
           </div>
         </div>
       </div>
@@ -29,7 +31,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
